test/reader/tglyph/error/config/not-first-block.tglyph
First block is paragraph.

⑇⑇⑇
title = 'Document Title 1'
⑇⑇⑇

⑇⑇⑇
title = 'Document Title 2'
⑇⑇⑇

Main text.
